[package]
name = "fcmd"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proto={path="../proto"}
rsocket={path="../rsocket"}
crossterm = "0.18.2"
protobuf = "2.25.1"

[profile.dev]
opt-level =0

[profile.release]
opt-level=3
